--- a/src/app/pages/login/login-page.component.html
+++ b/src/app/pages/login/login-page.component.html
@@ -1,57 +1,13 @@
 <app-no-authorized-layout>
-  <div class="grid grid-cols-1 rounded-xl bg-base-100 md:grid-cols-2">
-    <div class="px-10 py-24">
-      <h2 class="mb-2 text-center text-2xl font-semibold">
-        Terms and Conditions
-      </h2>
-    </div>
-    <div class="px-10 py-24">
-      <h2 class="mb-2 text-center text-2xl font-semibold">Login</h2>
-      <form>
-        <div class="mb-4">
-          <div class="form-control mt-4 w-full">
-            <label class="label"
-              ><span class="undefined label-text text-base-content"
-                >Email Id</span
-              ></label
-            ><input
-              type="emailId"
-              placeholder=""
-              class="input input-bordered w-full"
-              value="" />
-          </div>
-          <div class="form-control mt-4 w-full">
-            <label class="label"
-              ><span class="undefined label-text text-base-content"
-                >Password</span
-              ></label
-            ><input
-              type="password"
-              placeholder=""
-              class="input input-bordered w-full"
-              value="" />
-          </div>
-        </div>
-        <div class="text-right text-primary">
-          <a href="/forgot-password"
-            ><span
-              class="inline-block text-sm transition duration-200 hover:cursor-pointer hover:text-primary hover:underline"
-              >Forgot Password?</span
-            ></a
-          >
-        </div>
-        <p class="mt-8 text-center text-error"></p>
-        <button type="submit" class="btn btn-primary mt-2 w-full">Login</button>
-        <div class="mt-4 text-center">
-          Don't have an account yet?
-          <a href="/register"
-            ><span
-              class="inline-block transition duration-200 hover:cursor-pointer hover:text-primary hover:underline"
-              >Register</span
-            ></a
-          >
-        </div>
-      </form>
+  <div class="hero rounded-xl bg-base-100 p-16">
+    <div class="hero-content flex-col lg:flex-row-reverse">
+      <div class="max-w-lg">
+        <h1 class="text-5xl font-bold">Login with Google</h1>
+        <p class="pb-14 pt-6">
+          You must be signed in to your Google account to use Timeline.
+        </p>
+        <button class="btn btn-primary">Authorize</button>
+      </div>
     </div>
   </div>
 </app-no-authorized-layout>
