--- a/src/app/layout/no-authorized/no-authorized-layout.component.html
+++ b/src/app/layout/no-authorized/no-authorized-layout.component.html
@@ -1,5 +1,6 @@
-<div class="flex min-h-screen items-center bg-base-100">
+<div class="flex h-[calc(100vh-56px)] items-center bg-base-100">
   <div class="card mx-auto w-full max-w-5xl shadow-xl">
     <ng-content></ng-content>
   </div>
 </div>
+<app-footer />
