--- a/src/app/layout/no-authorized/no-authorized-layout.component.html
+++ b/src/app/layout/no-authorized/no-authorized-layout.component.html
@@ -1,4 +1,5 @@
-<div class="flex h-[calc(100vh-70px)] items-center bg-base-100">
+<app-header />
+<div class="flex h-[calc(100vh-70px-70px)] items-center bg-base-100">
   <div class="card mx-auto w-full max-w-5xl shadow-xl">
     <ng-content></ng-content>
   </div>
