feat: add notifications

--- a/src/app/layout/share/footer/footer.component.html
+++ b/src/app/layout/share/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="footer items-center bg-neutral p-4 text-neutral-content">
   <aside class="grid-flow-col items-center">
-    <span class="block bg-warning px-2">timeline</span>
+    <span class="block bg-accent px-2">timeline</span>
     <p>Copyright © 2024 - All right reserved</p>
   </aside>
   <nav class="grid-flow-col gap-4 md:place-self-center md:justify-self-end">
