--- a/src/app/layout/share/header/header.component.html
+++ b/src/app/layout/share/header/header.component.html
@@ -5,7 +5,7 @@
     </button> -->
   </div>
   <div class="flex-1">
-    <a class="btn btn-warning text-xl text-neutral-content" href="/">
+    <a class="btn btn-accent text-xl text-neutral-content" href="/">
       timeline
     </a>
   </div>
