feat: add store for notifications

--- a/src/app/layout/share/notifications/notifications-container.component.html
+++ b/src/app/layout/share/notifications/notifications-container.component.html
@@ -16,7 +16,7 @@
         <div
           class="flex w-full flex-grow flex-col flex-wrap py-1 sm:flex-row sm:flex-nowrap">
           <div class="w-full flex-grow px-3 pt-1">
-            <p>{{ message.content.message }}</p>
+            <p>{{ message.message }}</p>
           </div>
         </div>
       </div>
