feat: add auth store

--- a/src/app/pages/login/login-page.component.html
+++ b/src/app/pages/login/login-page.component.html
@@ -6,9 +6,7 @@
         <p class="pb-14 pt-6">
           You must be signed in to your Google account to use Timeline.
         </p>
-        <button class="btn btn-primary">
-          <ng-icon name="saxLogin1Outline" size="24"></ng-icon>Authorize
-        </button>
+        <app-login-container />
       </div>
     </div>
   </div>
