fix: fix horyzontal aligment

--- a/src/app/pages/non-authorized/login/login-page.component.html
+++ b/src/app/pages/non-authorized/login/login-page.component.html
@@ -1,13 +1,15 @@
 <app-no-authorized-layout>
-  <div class="card mx-auto w-full max-w-5xl shadow-xl">
-    <div class="hero rounded-xl bg-base-200 p-16">
-      <div class="hero-content flex-col lg:flex-row-reverse">
-        <div class="max-w-lg">
-          <h1 class="text-5xl font-bold">Login with Google</h1>
-          <p class="pb-14 pt-6">
-            You must be signed in to your Google account to use Timeline.
-          </p>
-          <app-login-container />
+  <div class="flex w-full items-center">
+    <div class="card mx-auto w-full max-w-5xl shadow-xl">
+      <div class="hero rounded-xl bg-base-200 p-16">
+        <div class="hero-content flex-col lg:flex-row-reverse">
+          <div class="max-w-lg">
+            <h1 class="text-5xl font-bold">Login with Google</h1>
+            <p class="pb-14 pt-6">
+              You must be signed in to your Google account to use Timeline.
+            </p>
+            <app-login-container />
+          </div>
         </div>
       </div>
     </div>
