feat: add time line to index  component

--- a/src/app/layout/no-authorized/no-authorized-layout.component.html
+++ b/src/app/layout/no-authorized/no-authorized-layout.component.html
@@ -1,5 +1,5 @@
 <app-header />
-<div class="flex h-[calc(100vh-70px-70px)] bg-base-100">
+<div class="flex min-h-[calc(100vh-70px-64px)] bg-base-100">
   <ng-content></ng-content>
 </div>
 <app-notifications />
