--- a/src/app/pages/non-authorized/index/index-page.component.html
+++ b/src/app/pages/non-authorized/index/index-page.component.html
@@ -18,12 +18,9 @@
             <div class="mb-2 text-lg font-black">{{ event.title }}</div>
             {{ event.description }}
             @if (event.url) {
-              <div class="items-center rounded-lg bg-neutral p-1">
-                <ng-icon name="saxLinkOutline" />
-                <a class="link ml-4" [href]="event.url.link"
-                  >{{ event.url.title }}
-                </a>
-              </div>
+              <a class="btn btn-neutral btn-sm" [href]="event.url.link">
+                <ng-icon name="saxLinkOutline" />{{ event.url.title }}
+              </a>
             }
           </div>
           <hr />
