feat: add modal dialog for adding event component

--- a/src/app/components/add-event/add-event.component.html
+++ b/src/app/components/add-event/add-event.component.html
@@ -1,3 +1,10 @@
 <div class="tooltip" data-tip="add new event">
-  <a class="btn btn-accent btn-circle"><ng-icon name="saxAddOutline" size=24></ng-icon></a>
+  <a
+    class="btn btn-circle btn-accent"
+    (click)="showModal()"
+    (keyup)="showModal()"
+    tabindex="0"
+    ><ng-icon name=" saxAddOutline" size="24"></ng-icon
+  ></a>
 </div>
+<app-modal [show]="shouldShow()" (onClosed)="onClosed()"></app-modal>
