feat: add form to add event

--- a/src/app/components/add-event/add-event.component.html
+++ b/src/app/components/add-event/add-event.component.html
@@ -21,7 +21,11 @@
           <span class="label-text">Select date of your event</span>
         </div>
         <label class="input input-bordered input-error flex items-center gap-2">
-          <input type="text" class="w-full grow" />
+          <input
+            type="text"
+            class="w-full grow"
+            name="date"
+            [formControl]="addEventForm.controls.date" />
           <ng-icon
             class="cursor-pointer"
             name="saxCalendar1Outline"
@@ -35,11 +39,19 @@
       <div class="form-control">
         <label class="label cursor-pointer">
           <span class="label-text">Add time</span>
-          <input type="checkbox" class="toggle" checked />
+          <input
+            name="add-time"
+            type="checkbox"
+            class="toggle"
+            [formControl]="addEventForm.controls.addTime" />
         </label>
         <label class="label cursor-pointer">
           <span class="label-text">Show time on timeline</span>
-          <input type="checkbox" class="toggle" checked />
+          <input
+            name="show-time"
+            type="checkbox"
+            class="toggle"
+            [formControl]="addEventForm.controls.showTime" />
         </label>
       </div>
     }
@@ -49,7 +61,11 @@
           <span class="label-text">Title</span>
         </div>
         <label class="input input-bordered flex items-center gap-2">
-          <input type="text" class="w-full grow" />
+          <input
+            type="text"
+            class="w-full grow"
+            name="title"
+            [formControl]="addEventForm.controls.title" />
         </label>
       </label>
       <label class="form-control">
@@ -57,7 +73,9 @@
           <span class="label-text">Content</span>
         </div>
         <textarea
-          class="textarea textarea-bordered h-24 w-full max-w-xs"></textarea>
+          class="textarea textarea-bordered h-24 w-full max-w-xs"
+          name="content"
+          [formControl]="addEventForm.controls.content"></textarea>
         <div class="label">
           <span class="label-text-alt text-error">Error</span>
         </div>
@@ -73,7 +91,7 @@
             type="text"
             class="w-full"
             (keyup.enter)="addTag()"
-            [formControl]="tag" />
+            [formControl]="addEventForm.controls.tag" />
         </label>
         <div class="label">
           <span class="label-text-alt">
@@ -101,7 +119,9 @@
       (click)="goNext()">
       Next <ng-icon name="saxArrowRight2Outline" size="24"></ng-icon>
     </button>
-    <button class="btn btn-primary" [attr.disabled]="!couldAdd() ? true : null">
+    <button
+      class="btn btn-primary"
+      [attr.disabled]="this.addEventForm.valid ? true : null">
       Add
       <ng-icon name="saxCalendarAddOutline" size="24"></ng-icon>
     </button>
