refactor: make Timeline component as widget

--- a/src/app/widgets/timeline/timeline.component.html
+++ b/src/app/widgets/timeline/timeline.component.html
@@ -16,7 +16,7 @@
         <div class="text-lg font-black">{{ event.title }}</div>
         <app-timeline-event-tags
           [tags]="event.tags"
-          (clickToTag)="filterByTag.emit($event)" />
+          (clickToTag)="filterByTag($event)" />
         <div class="mt-2">{{ event.description }}</div>
         <app-timeline-event-url [url]="event.url" />
       </div>
