--- a/src/app/pages/non-authorized/index/index-page.component.html
+++ b/src/app/pages/non-authorized/index/index-page.component.html
@@ -1,5 +1,5 @@
 <app-no-authorized-layout>
   <div class="mx-auto w-full max-w-5xl pt-4">
-    <app-timeline [timeline]="timeline()" />
+    <app-timeline />
   </div>
 </app-no-authorized-layout>
