--- a/src/app/widgets/timeline/add-event-form/add-event-form.component.html
+++ b/src/app/widgets/timeline/add-event-form/add-event-form.component.html
@@ -1,2 +1,133 @@
-<p>add-event-form works!</p>
-,
+<h1 class="text-lg font-bold">{{ title() }}</h1>
+<ul class="steps mt-4 w-full">
+  @for (step of steps(); track $index) {
+    <li class="step" [class.step-primary]="step.isActive"></li>
+  }
+</ul>
+<div class="divider"></div>
+<div class="px-8">
+  @if (this.activeStep() === 0) {
+    <label class="form-control">
+      <div class="label">
+        <span class="label-text">Select date of your event</span>
+      </div>
+      <label
+        class="input input-bordered flex items-center gap-2"
+        [class.error]="!addEventForm.controls.date.valid">
+        <input
+          type="text"
+          class="w-full grow"
+          name="date"
+          [formControl]="addEventForm.controls.date" />
+        <ng-icon
+          class="cursor-pointer"
+          name="saxCalendar1Outline"
+          size="24"
+          (click)="selectDate()"></ng-icon>
+      </label>
+      <div class="label" [class.hidden]="addEventForm.controls.date.valid">
+        <span class="label-text-alt text-error">Should be date</span>
+      </div>
+    </label>
+    <div class="form-control">
+      <label class="label cursor-pointer">
+        <span class="label-text">Add time</span>
+        <input
+          name="add-time"
+          type="checkbox"
+          class="toggle"
+          [formControl]="addEventForm.controls.addTime" />
+      </label>
+    </div>
+    <div class="form-control">
+      <label class="label cursor-pointer">
+        <span class="label-text">Time</span>
+        <input
+          name="time"
+          type="text"
+          class="input input-bordered w-16"
+          [formControl]="addEventForm.controls.time" />
+      </label>
+    </div>
+    <div class="form-control">
+      <label class="label cursor-pointer">
+        <span class="label-text">Show time on timeline</span>
+        <input
+          name="show-time"
+          type="checkbox"
+          class="toggle"
+          [formControl]="addEventForm.controls.showTime" />
+      </label>
+    </div>
+  }
+  @if (this.activeStep() === 1) {
+    <label class="form-control">
+      <div class="label">
+        <span class="label-text">Title</span>
+      </div>
+      <label class="input input-bordered flex items-center gap-2">
+        <input
+          type="text"
+          class="w-full grow"
+          name="title"
+          [formControl]="addEventForm.controls.title" />
+      </label>
+    </label>
+    <label class="form-control">
+      <div class="label">
+        <span class="label-text">Content</span>
+      </div>
+      <textarea
+        class="textarea textarea-bordered h-24 w-full max-w-xs"
+        name="content"
+        [formControl]="addEventForm.controls.content"></textarea>
+      <div class="label">
+        <span class="label-text-alt text-error">Error</span>
+      </div>
+    </label>
+  }
+  @if (this.activeStep() === 2) {
+    <label class="form-control">
+      <div class="label">
+        <span class="label-text">Tags</span>
+      </div>
+      <label class="input input-bordered flex items-center gap-2">
+        <input
+          type="text"
+          class="w-full"
+          (keyup.enter)="addTag()"
+          [formControl]="addEventForm.controls.tag" />
+      </label>
+      <div class="label">
+        <span class="label-text-alt">
+          Pressing Enter will add a tag. You can add multiple tags, separated by
+          commas.
+        </span>
+      </div>
+    </label>
+    <app-add-event-tags
+      [tags]="addedTags()"
+      (clickToTag)="removeTag($event)"></app-add-event-tags>
+  }
+</div>
+<div class="modal-action">
+  <button
+    class="btn"
+    [attr.disabled]="disablePrevious() ? true : null"
+    (click)="goPrevious()">
+    <ng-icon name="saxArrowLeft3Outline" size="24"></ng-icon>
+    Previous
+  </button>
+  <button
+    class="btn"
+    [attr.disabled]="disableNext() ? true : null"
+    (click)="goNext()">
+    Next <ng-icon name="saxArrowRight2Outline" size="24"></ng-icon>
+  </button>
+  <button
+    class="btn btn-primary"
+    [attr.disabled]="!this.addEventForm.valid ? true : null">
+    Add
+    <ng-icon name="saxCalendarAddOutline" size="24"></ng-icon>
+  </button>
+</div>
