--- a/src/app/widgets/timeline/add-event-form/add-event-form.component.html
+++ b/src/app/widgets/timeline/add-event-form/add-event-form.component.html
@@ -1,5 +1,10 @@
 <div role="tablist" class="tabs-boxed tabs">
-  <a role="tab" tabindex="0" class="tab" [class.tab-active]="this.activeStep() === 0" (click)="this.activeStep.set(0)"
+  <a
+    role="tab"
+    tabindex="0"
+    class="tab"
+    [class.tab-active]="this.activeStep() === 0"
+    (click)="this.activeStep.set(0)"
     (keyup)="this.activeStep.set(0)">
     text something
   </a>
@@ -24,72 +29,108 @@
 </div>
 <div class="rounded bg-stone-700 px-4 pb-4 pt-2">
   @if (this.activeStep() === 0) {
-  <label class="form-control">
-    <div class="label">
-      <span class="label-text">Title</span>
-    </div>
-    <label class="input input-bordered flex items-center gap-2">
-      <input type="text" class="w-full grow" name="title" [formControl]="addEventForm.controls.title" />
+    <label class="form-control">
+      <div class="label">
+        <span class="label-text">Title</span>
+      </div>
+      <label class="input input-bordered flex items-center gap-2">
+        <input
+          type="text"
+          class="w-full grow"
+          name="title"
+          [formControl]="addEventForm.controls.title" />
+      </label>
     </label>
-  </label>
-  <label class="form-control">
-    <div class="label">
-      <span class="label-text">Content</span>
-    </div>
-    <textarea class="textarea textarea-bordered h-32 w-full" name="content"
-      [formControl]="addEventForm.controls.content"></textarea>
-  </label>
+    <label class="form-control">
+      <div class="label">
+        <span class="label-text">Content</span>
+      </div>
+      <textarea
+        class="textarea textarea-bordered h-32 w-full"
+        name="content"
+        [formControl]="addEventForm.controls.content"></textarea>
+    </label>
   }
   @if (this.activeStep() === 1) {
-  <label class="form-control">
-    <div class="label">
-      <span class="label-text">Select date of your event</span>
+    <label class="form-control">
+      <div class="label">
+        <span class="label-text">Select date of your event</span>
+      </div>
+      <label
+        class="input input-bordered flex items-center gap-2"
+        [class.error]="!addEventForm.controls.date.valid">
+        <input
+          type="text"
+          class="w-full grow"
+          name="date"
+          [formControl]="addEventForm.controls.date" />
+        <ng-icon
+          class="cursor-pointer"
+          name="saxCalendar1Outline"
+          size="24"
+          (click)="selectDate()"></ng-icon>
+      </label>
+      <div class="label" [class.hidden]="addEventForm.controls.date.valid">
+        <span class="label-text-alt text-error">Should be date</span>
+      </div>
+    </label>
+    <div class="form-control">
+      <label class="label cursor-pointer">
+        <span class="label-text">Add time</span>
+        <input
+          name="add-time"
+          type="checkbox"
+          class="toggle"
+          [formControl]="addEventForm.controls.withTime" />
+      </label>
     </div>
-    <label class="input input-bordered flex items-center gap-2" [class.error]="!addEventForm.controls.date.valid">
-      <input type="text" class="w-full grow" name="date" [formControl]="addEventForm.controls.date" />
-      <ng-icon class="cursor-pointer" name="saxCalendar1Outline" size="24" (click)="selectDate()"></ng-icon>
-    </label>
-    <div class="label" [class.hidden]="addEventForm.controls.date.valid">
-      <span class="label-text-alt text-error">Should be date</span>
+    <div class="form-control">
+      <label class="label cursor-pointer">
+        <span class="label-text">Time</span>
+        <input
+          name="time"
+          type="text"
+          class="input input-bordered w-16"
+          [formControl]="addEventForm.controls.time" />
+      </label>
     </div>
-  </label>
-  <div class="form-control">
-    <label class="label cursor-pointer">
-      <span class="label-text">Add time</span>
-      <input name="add-time" type="checkbox" class="toggle" [formControl]="addEventForm.controls.withTime" />
-    </label>
-  </div>
-  <div class="form-control">
-    <label class="label cursor-pointer">
-      <span class="label-text">Time</span>
-      <input name="time" type="text" class="input input-bordered w-16" [formControl]="addEventForm.controls.time" />
-    </label>
-  </div>
-  <div class="form-control">
-    <label class="label cursor-pointer">
-      <span class="label-text">Show time on timeline</span>
-      <input name="show-time" type="checkbox" class="toggle" [formControl]="addEventForm.controls.showTime" />
-    </label>
-  </div>
+    <div class="form-control">
+      <label class="label cursor-pointer">
+        <span class="label-text">Show time on timeline</span>
+        <input
+          name="show-time"
+          type="checkbox"
+          class="toggle"
+          [formControl]="addEventForm.controls.showTime" />
+      </label>
+    </div>
   }
   @if (this.activeStep() === 2) {
-  <label class="form-control">
-    <div class="label">
-      <span class="label-text">Tags</span>
-    </div>
-    <label class="input input-bordered flex items-center gap-2">
-      <input #tag type="text" class="w-full" (keyup.enter)="addTag(tag.value)" />
+    <label class="form-control">
+      <div class="label">
+        <span class="label-text">Tags</span>
+      </div>
+      <label class="input input-bordered flex items-center gap-2">
+        <input
+          #tag
+          type="text"
+          class="w-full"
+          (keyup.enter)="addTag(tag.value)" />
+      </label>
+      <div class="label">
+        <span class="label-text-alt">
+          Pressing Enter will add a tag. You can add multiple tags, separated by
+          commas.
+        </span>
+      </div>
     </label>
-    <div class="label">
-      <span class="label-text-alt">
-        Pressing Enter will add a tag. You can add multiple tags, separated by
-        commas.
-      </span>
-    </div>
-  </label>
-  <app-add-event-tags [tags]="addedTags()" (clickToTag)="removeTag($event)"></app-add-event-tags>
+    <app-add-event-tags
+      [tags]="addedTags()"
+      (clickToTag)="removeTag($event)"></app-add-event-tags>
   }
-  <button (click)="addEvent.emit()" class="btn btn-primary mt-8"
+  <button
+    (click)="addEvent.emit()"
+    class="btn btn-primary mt-8"
     [attr.disabled]="!this.addEventForm.valid ? true : null">
     <ng-icon name="saxCalendarAddOutline" size="24"></ng-icon>
     Add
