--- a/src/app/widgets/timeline/timeline.component.html
+++ b/src/app/widgets/timeline/timeline.component.html
@@ -1,29 +1,51 @@
-<app-add-event-button (addEvent)="addEvent()" [disabled]="this.shouldAddEvent() !== null" />
-<ul class="timeline timeline-vertical timeline-snap-icon max-md:timeline-compact">
+<app-add-event-button
+  (addEvent)="addEvent()"
+  [disabled]="this.shouldAddEvent() !== null" />
+<ul
+  class="timeline timeline-vertical timeline-snap-icon max-md:timeline-compact">
   @for (event of timeline(); track $index) {
-  <li>
-    <div class="timeline-middle">
-      <ng-icon [svg]="event.icon.icon" size="24" [class.text-primary]="event.draft" />
-    </div>
-    <div class="w-full rounded" [class.pr-2]="event.draft" [class.bg-stone-700]="event.draft"
-      [class.timeline-start]="event.changeDirection" [class.md:text-end]="event.changeDirection"
-      [class.timeline-end]="!event.changeDirection">
-      <app-timeline-event-date [date]="event.date" />
-      <div class="text-lg font-black">{{ event.title }}</div>
-      <app-timeline-event-tags [tags]="event.tags" (clickToTag)="filterByTag($event)" />
-      <app-markdown-content [content]="event.description" class="mt-2"></app-markdown-content>
-      <app-timeline-event-url [url]="event.url" />
-    </div>
-    @if (event.draft) {
-    <div class="h-full w-full rounded pb-10" [class.timeline-start]="!event.changeDirection"
-      [class.md:text-end]="!event.changeDirection" [class.timeline-end]="event.changeDirection">
-      <app-add-event-form (changeValues$)="valuesChanges($event)" (addEvent)="insertEvent()" />
-      <button class="btn btn-circle btn-error btn-sm absolute" style="top: -15px; right: -15px" (click)="dismiss()">
-        ✕
-      </button>
-    </div>
-    }
-    <hr [class.bg-accent]="event.draft" />
-  </li>
+    <li>
+      <div class="timeline-middle">
+        <ng-icon
+          [svg]="event.icon.icon"
+          size="24"
+          [class.text-primary]="event.draft" />
+      </div>
+      <div
+        class="w-full rounded"
+        [class.pr-2]="event.draft"
+        [class.bg-stone-700]="event.draft"
+        [class.timeline-start]="event.changeDirection"
+        [class.md:text-end]="event.changeDirection"
+        [class.timeline-end]="!event.changeDirection">
+        <app-timeline-event-date [date]="event.date" />
+        <div class="text-lg font-black">{{ event.title }}</div>
+        <app-timeline-event-tags
+          [tags]="event.tags"
+          (clickToTag)="filterByTag($event)" />
+        <app-markdown-content
+          [content]="event.description"
+          class="mt-2"></app-markdown-content>
+        <app-timeline-event-url [url]="event.url" />
+      </div>
+      @if (event.draft) {
+        <div
+          class="h-full w-full rounded pb-10"
+          [class.timeline-start]="!event.changeDirection"
+          [class.md:text-end]="!event.changeDirection"
+          [class.timeline-end]="event.changeDirection">
+          <app-add-event-form
+            (changeValues$)="valuesChanges($event)"
+            (addEvent)="insertEvent()" />
+          <button
+            class="btn btn-circle btn-error btn-sm absolute"
+            style="top: -15px; right: -15px"
+            (click)="dismiss()">
+            ✕
+          </button>
+        </div>
+      }
+      <hr [class.bg-accent]="event.draft" />
+    </li>
   }
 </ul>
